--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title> - 查厘士 CHA LiSi - </title>
+    <title> -查厘士 查厘士CHA LiSi - </title>
     <meta name="Keywords" content="" />
     <meta name="Description" content="" />
     <link href="style.css" rel="stylesheet" type="text/css" />
